# RC_Tasks

HackerRankTask/: Alice&bob.cpp  aVeryBigSum.cpp
HackerRankTask/Vector diagonals/: Task.cpp
HackerRankTask/array reverse/: arrreve.cpp
HackerRankTask/ptrs01/: ptrs01.cpp
Session13sTask/: Employee.cpp  Employee.h  FullTime.cpp  FullTime.h  PartTime.cpp  PartTime.h  Person.cpp  Person.h  Postgrad.cpp  Postgrad.h  Session13sTask.cpp  Student.cpp  Student.h  TA.cpp  TA.h
Session16sTask/: Employee.cpp  Employee.h  Engineer.cpp  Engineer.h  Sales.cpp  Sales.h  Session16sTask.cpp
Session16sTask/Session16SAnotherMethod/: AnotherMethod.cpp
Session19sTask/: Session19sTask.cpp
Session20sTask/: Session20sTask.cpp
Session32sTask/: CMakeLists.txt  TESTING.cpp  main.cpp
Session32sTask/Cyber-Dojo/: cyber-dojo-2024-6-26-A5kQLq.tgz
Session32sTask/StackLib/: CMakeLists.txt  Stack.cpp  Stack.hpp
Task01/: Task01.txt
Task02/: script01.sh
Task02/Assignment/: Assignmentpt01.sh  Assignmentpt02.sh
Task02/Task02_txts/: 1.txt  2.txt  3pt2.txt  Task02.txt
Task07/: Task07.cpp
